fixation contrast ok

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1650,7 +1650,8 @@ mark {
 }
 
 .text-left {
-    text-align: left
+    text-align: left;
+    font-size: 14px;
 }
 
 .text-right {
@@ -1658,9 +1659,12 @@ mark {
 }
 
 .text-center {
-    text-align: center
+    text-align: center;
+    font-size: 14px;
 }
-
+.text-center2 {
+    text-align: center;
+}
 .text-justify {
     text-align: justify
 }
