--- a/style.css
+++ b/style.css
@@ -159,6 +159,14 @@ a:hover {
 .d-bloc p a:hover {
     color: rgba(255, 255, 255, 1);
 }
+.icon-md{
+    color: #333!important;
+}
+.social a{
+    color: #333!important;
+    font-weight: bold;
+    font-size: 15px;
+}
 
 .d-bloc .navbar-toggle .icon-bar {
     background: rgba(255, 255, 255, 1);
@@ -742,10 +750,13 @@ h4 {
     margin-top: 24px;
 }
 
-.white {
-    color: #FFFFFF!important;
+.gray-black {
+    color: #333!important;
 }
-
+.black{
+    color: #333!important;
+    font-weight: bold!important;
+}
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -782,17 +793,19 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
-
+.white{
+    color: #FFFFFF!important;
+}
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #333!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #ccc!important;
 }
 
 .ltc-white {
